updated fix changes to NCN so that it no longer wraps on to two lines on mobile

--- a/ds_judgements_public_ui/sass/includes/_judgment_text.scss
+++ b/ds_judgements_public_ui/sass/includes/_judgment_text.scss
@@ -114,9 +114,10 @@
     text-align: right;
 
     span {
-      font-weight: bolder;
+      font-weight: normal;
       display: inline-block;
       text-decoration: underline;
+      white-space: nowrap;
     }
   }
 
